feign 메서드 추가